# XNNPACK

./: CMakeLists.txt  run_gemm_test.sh
gemm_benchmark/: CMakeLists.txt  README.md  subgraph_gemm.cpp  subgraph_gemm.h  test_gemm.cpp
